--- a/css/style.css
+++ b/css/style.css
@@ -17,16 +17,15 @@ html {
 
 }
 
-/*.navbar {
-    position: relative;
+.navbar {
+    position: fixed;
   z-index: 999999;
- float: left;*/
+ 
   }
  .nav {
-  height: 100%;
+  height: 100px;
   margin: 0;
-  position: relative;
-  z-index: 999999;
+  
  }
  .navbar-default {
   margin: 0;
@@ -40,12 +39,12 @@ html {
 
 
 
- .navbar-header h3 small {
+.navbar-header h3 small {
   font-size: .5em;
   font-family: 'PT Sans Narrow', sans-serif;
- }
+}
 
- .nav img {
+.nav img {
   height: 4em;
 }
 
