--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 body {
   height:100%;
-  font-family: 'PT Sans Narrow', sans-serif;
+  font-family: 'Source Sans Pro', sans-serif;
 }
 
 html {
@@ -23,74 +23,41 @@ html {
   border:0;
 }
 
+.logo{
+ margin-bottom: 1.5em;
+ font-size: 1.2em;
 
-
-.navbar-header h3{
-  margin: 0;
-  padding-left: 1em;
-  font-family: 'Knewave';
- }
-
-
-
-.navbar-header h3 small {
-  font-size: .5em;
-  font-family: 'PT Sans Narrow', sans-serif;
 }
 
-.nav img {
-  height: 4em;
+.outside-logo h3 {
+  font-family: 'Merriweather', serif;
+  font-size: 2em;
 }
 
-.nav h4 {
-  line-height: 40px;
-  margin-left: 30px;
+.controls {
+  clear: both;
+  padding-top: 2em;
 }
 
-.nav li {
-  margin-top: 25px;
+.controls .activity #bike:active {
+  color: blue;
 }
 
-.nav #bike {
-  margin-left: 10px;
-}
-
-.nav #address {
-  margin: 12px 120px 0 10px;
-}
-
-.nav .search-distance {
-  margin: 12px 0 0 35px;
-  text-align: center;
-}
-
-.nav #find-trails {
-  margin-left: 15px;
-  /*margin-top: -10px;*/
-}
-
-/*.container {
-  position: absolute;
-  top:4em;
-  right: 0;
-  left: 0;
-}*/
-/*.controls {
-  background-color: rgba(255, 255, 255, .7);
-  border: 2px solid;
-  border-radius: 3px;
-  height: auto;
-  position: absolute;
-  text-align: center;*/
-
+.controls img {
+  height: 3em;
 }
 
 #radius .slider-selection {
   background: #b7b7b7;
 }
 
+.controls .search-distance p {
+  margin-top: .75em;
+}
 
-
+.controls .find-trails {
+  margin: 2em 0;
+}
 
 
 #thumb {
